# spacer

./: .codex-task.md  .gitignore  README.md  pyproject.toml
docs/: constitutional-coding.md  design.md  phase1-ideation.md  phases.md
src/spacer/: auth.py  bib.py  chat.py  cli.py  init.py  llm.py  status.py
src/spacer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/spacer/prompts/: system.md
